--- a/DragDropRichText/index.html
+++ b/DragDropRichText/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="header.css" />
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="footer.css" />
-<script src="drop.js"></script>
 </head>
 <body>
 
@@ -29,7 +28,7 @@
   <div class="column left">
     <h2 style="text-align: center;">Drop Menus</h2>
     <div class="drag-container" id="draggable">
-        <div class="text drag-item"  id="text" draggable="true" ondragstart="drag(event)">
+        <div class="text drag-item" data-draggable   id="text" draggable="true" >
             <p>
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 viewBox="0 0 379.254 379.254" style="enable-background:new 0 0 379.254 379.254;" xml:space="preserve" width="30" height="30">
@@ -90,7 +89,7 @@ C323.314,277.195,319.956,273.837,315.814,273.837z"/>
 </svg>
             </p>
         </div>
-        <div class="image drag-item"  id="image" draggable="true" ondragstart="drag(event)">
+        <div class="image drag-item" data-draggable  id="image" draggable="true" >
             <!-- <img src = "textboxsvg.svg" alt="" width="30" height="30"/> -->
             <p><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30"><path fill="none" d="M0 0h24v24H0z"/>
                 <path d="M4.828 21l-.02.02-.021-.02H2.992A.993.993 0 0 1 2 20.007V3.993A1 1 0 0 1 2.992 3h18.016c.548 0 .992.445.992.993v16.014a1 1 0 0 1-.992.993H4.828zM20 15V5H4v14L14 9l6 6zm0 2.828l-6-6L6.828 19H20v-1.172zM8 11a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"/></svg> 
@@ -103,8 +102,7 @@ C323.314,277.195,319.956,273.837,315.814,273.837z"/>
   <div class="column middle" style="float: left;">
     <h2>Add your Content!</h2>
       <div id="templateEditor">
-          <div class="dropzone" id="dropzone"  ondrop="return drop(event)" 
-          ondragover="return allowDrop(event)">
+          <div class="dropzone" data-dropzone id="dropzone">
           Dear {name}
           <br /><br />
           Create personal, plain-text emails with all the formatting options of HTML—now with
@@ -159,5 +157,6 @@ C323.314,277.195,319.956,273.837,315.814,273.837z"/>
     <p>Footer: &#169 NHS Terms and conditions
         Privacy and cookies</p>
   </div>
+  <script src="drop.js"></script>
 </body>
 </html>
